<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addevent.AddEventFragment">

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="322dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="322dp"
        android:layout_height="68dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType" />

    <EditText
        android:id="@+id/inputCourse"
        android:layout_width="322dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/event_course"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/deadlineTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/event_deadlineTime"
        android:inputType="time"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCourse" />

    <EditText
        android:id="@+id/deadlineDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/event_deadlineDate"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineTimeInput" />

    <EditText
        android:id="@+id/description"
        android:layout_width="365dp"
        android:layout_height="91dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/event_description"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineDateInput" />

    <Button
        android:id="@+id/addEvent"
        android:layout_width="107dp"
        android:layout_height="51dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="72dp"
        android:text="@string/event_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>